wip: revamping account management

--- a/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/account-selector-item/account-selector-item.component.html
@@ -18,7 +18,7 @@
             verified_user
           </mat-icon>
           <mat-icon *ngIf="account.type !== 'offline' && !account.confirmed"
-                    class="s-12"
+                    class="s-12 error-text"
                     matTooltip="{{'error_no_public_key' | i18n}}">
             lock_open
           </mat-icon>
