--- a/web/angular-wallet/src/app/main/send-money/send-money.component.html
+++ b/web/angular-wallet/src/app/main/send-money/send-money.component.html
@@ -2,7 +2,7 @@
   <div class="account-info pl-20 pr-20 mb-8">
     <div class="account-info__field">
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
-      <p class="pb-8">{{account.accountRS}}</p>
+      <p class="pb-8">{{account.account | address}}</p>
     </div>
     <div class="account-info__field">
       <small class="secondary-text text-uppercase">{{'balance_available'| i18n}}</small>
