--- a/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
+++ b/web/angular-wallet/src/app/main/tokens/tokens-table/tokens-table.component.html
@@ -94,7 +94,7 @@
             <mat-icon class="actions-icon" matTooltip="{{'asset_trade' | i18n}}">trending_up</mat-icon>
           </a>
           <a [routerLink]="['/tokens/transfer', token.id]">
-            <mat-icon class="actions-icon" matTooltip="{{'asset_transfer' | i18n}}">vertical_align_top</mat-icon>
+            <mat-icon class="actions-icon" matTooltip="{{'asset_transfer' | i18n}}">publish</mat-icon>
           </a>
         </ng-container>
       </mat-cell>
