--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -27,7 +27,7 @@
   <div *ngIf="selectedAccount" class="user" fxLayout="column"
        [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
-    <div class="h3 username">{{ selectedAccount.accountRS }}</div>
+    <div class="h3 username">{{ selectedAccount.account | address }}</div>
     <div class="h5 username">{{ getBalance() | amount:'planck':true }}</div>
     <div class="h5 alias hint-text mt-4" *ngIf="selectedAccount.type !== 'offline'" [matMenuTriggerFor]="menu">
       <span>{{ getAccountName() }}
