--- a/web/angular-wallet/src/app/main/aliases/cancel-sale-alias/cancel-sale-alias.component.html
+++ b/web/angular-wallet/src/app/main/aliases/cancel-sale-alias/cancel-sale-alias.component.html
@@ -10,7 +10,7 @@
     </div>
     <div>
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
-      <p class="pb-8">{{account.accountRS}}</p>
+      <p class="pb-8">{{account.account | address}}</p>
     </div>
   </div>
 
