--- a/web/angular-wallet/src/app/main/dashboard/widgets/miningpool/miningpool.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/widgets/miningpool/miningpool.component.html
@@ -14,7 +14,7 @@
          fxLayoutAlign="center center"
     >
       <small class="font-size-10">{{'reward_recipient' | i18n}}</small>
-      <div class="font-size-16 font-weight-600">{{poolAccount.accountRS}}</div>
+      <div class="font-size-16 font-weight-600">{{poolAccount.account | address}}</div>
       <div *ngIf="this.poolName.startsWith('http')" class="font-size-12">
         <a [href]="this.poolName" rel="noreferrer noopener" target="_blank">{{poolName}}</a>
       </div>
