--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -2,7 +2,7 @@
   <div class="account-info pl-20 pr-20 mb-8">
     <div class="account-info__field">
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
-      <p class="pb-8">{{account.accountRS}}</p>
+      <p class="pb-8">{{account.account | address}}</p>
     </div>
     <div class="w-120" fxLayout="row" fxLayoutAlign="center center" >
       <mat-icon *ngIf="formatType.value === 'src44'" class="mr-8 font-size-18 grey-500-fg ml-2" matTooltip="{{ 'src44_info' | i18n }}">info</mat-icon>
