--- a/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer.component.html
+++ b/web/angular-wallet/src/app/main/tokens/token-transfer/token-transfer.component.html
@@ -4,7 +4,7 @@
   <div class="info pl-20 pr-20 mb-8">
     <div class="info__field">
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
-      <p class="pb-8">{{account.accountRS}}</p>
+      <p class="pb-8">{{account.account | address}}</p>
     </div>
     <div class="info__field">
       <small class="secondary-text text-uppercase">{{'balance_available'| i18n}}</small>
