feat: sorting accounts

--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -42,6 +42,12 @@
     >
       <canvas *ngIf="!avatarImgSrc" #avatar></canvas>
       <img *ngIf="avatarImgSrc" [src]="avatarImgSrc" alt="avatar-image" />
+      <div *ngIf="selectedAccount.type !== 'offline' && !selectedAccount.confirmed"
+           class="unsafe-badge"
+           matTooltip="{{'account_unsafe' | i18n}}"
+      >
+        <mat-icon>lock_open</mat-icon>
+      </div>
     </a>
   </div>
 
