--- a/web/angular-wallet/src/app/components/recipient-input/recipient-input.component.scss
+++ b/web/angular-wallet/src/app/components/recipient-input/recipient-input.component.scss
@@ -103,6 +103,10 @@ mat-progress-bar {
   pointer-events: none;
 }
 
+.ok {
+  color: green !important;
+}
+
 
 @-webkit-keyframes burning {
   0%{background-position:83% 0%}
