--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="w-100-p">
   <app-watermark></app-watermark>
+  <app-account-protection-warning></app-account-protection-warning>
   <ng-container *ngIf="userProfile === 'simple'">
     <app-simple-dashboard></app-simple-dashboard>
   </ng-container>
