--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -64,11 +64,11 @@
 
       <div class="toolbar-separator"></div>
 
-      <button *ngIf="selectedLanguage" mat-button
+      <button *ngIf="languageName" mat-button
               class="action-button"
               [matMenuTriggerFor]="languageMenu">
         <div fxLayout="row" fxLayoutAlign="center center">
-          <span class="iso text-uppercase" fxHide fxShow.gt-md>{{selectedLanguage.name}}</span>
+          <span class="iso text-uppercase" fxHide fxShow.gt-md>{{languageName}}</span>
           <span class="iso text-uppercase" fxHide.gt-md>
                       <mat-icon class="secondary-text">language</mat-icon>
                     </span>
