--- a/web/angular-wallet/src/app/main/accounts/accounts.component.html
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.html
@@ -1,6 +1,6 @@
-<app-page title="{{ 'account' | i18n }}" [full]="true" *ngIf="accounts">
+<app-page title="{{ 'manage_accounts' | i18n }}" [full]="true" *ngIf="accounts">
 
-  <div class="p-24">
+  <div ngClass.gt-sm="p-24 ">
 
     <div class="action-row">
       <div class="inputs">
